--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/universidadEjemplo.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.mariadb-java-client-3.2.0.jar=C:\\Users\\USER\\OneDrive\\Documentos\\util_argentinaprograma\\mariadb-java-client-3.2.0.jar
+file.reference.mariadb-java-client-2.3.0.jar=C:\\Users\\Luciano Chalfon\\Desktop\\Driver para conexion con Base de Datos\\mariadb-java-client-2.3.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mariadb-java-client-3.2.0.jar}
+    ${file.reference.mariadb-java-client-2.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
