--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 file.reference.mariadb-java-client-3.2.0.jar=C:\\Users\\Luciano Chalfon\\Desktop\\Driver para conexion con Base de Datos\\mariadb-java-client-3.2.0.jar
-user.properties.file=C:\\Users\\Luciano Chalfon\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\u901941\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
