--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,13 +31,15 @@ file.reference.mariadb-java-client-2.3.0.jar=C:\\Users\\Luciano Chalfon\\Desktop
 file.reference.mariadb-java-client-3.2.0.jar=C:\\Users\\Luciano\\Desktop\\Argentina programa aplicacion\\Guia 4\\mariadb-java-client-3.2.0.jar
 file.reference.mariadb-java-client-3.2.0.jar-1=C:\\Users\\u901941\\Documents\\Nico\\Driver\\mariadb-java-client-3.2.0.jar
 file.reference.mariadb-java-client-3.2.0.jar-2=C:\\Users\\u901941\\Documents\\Nico\\Driver\\mariadb-java-client-3.2.0.jar
+file.reference.mariadb-java-client-3.2.0.jar-3=C:\\Users\\Luciano\\Desktop\\Argentina programa aplicacion\\Guia 4\\mariadb-java-client-3.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-2.3.0.jar}:\
     ${file.reference.mariadb-java-client-3.2.0.jar}:\
     ${file.reference.mariadb-java-client-3.2.0.jar-1}:\
-    ${file.reference.mariadb-java-client-3.2.0.jar-2}
+    ${file.reference.mariadb-java-client-3.2.0.jar-2}:\
+    ${file.reference.mariadb-java-client-3.2.0.jar-3}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
